--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "adonis-fold": "^2.0.0",
     "adonis-framework": "^2.0.5",
     "adonis-lucid": "^2.0.2",
+    "basic-auth": "^1.0.3",
     "formidable": "^1.0.17",
     "ouch": "^0.2.0-beta",
     "raw-body": "^2.1.5"
